// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fab > Fab advanceVue demo works fine 1`] = `
<div
  class="t-fab"
  style="right: 16px; bottom: 32px;"
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--round t-fab__button"
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="fill: none; font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
    <span
      class="t-button__content"
    >
      
      按钮文字
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Fab > Fab baseVue demo works fine 1`] = `
<div
  class="t-fab"
  style="right: 16px; bottom: 32px;"
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--circle t-fab__button"
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="fill: none; font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
    <span
      class="t-button__content"
    >
      
      
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Fab > Fab collapsibleVue demo works fine 1`] = `
<div
  class="t-fab"
  data-v-dd5afc13=""
  style="right: 16px; bottom: 24px;"
>
  <div>
    
    <div
      class="wrap"
      data-v-dd5afc13=""
    >
      <div
        class="item"
        data-v-dd5afc13=""
      >
        <svg
          class="t-icon t-icon-add-circle"
          data-v-dd5afc13=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="add-circle"
          >
            <circle
              cx="12"
              cy="12"
              fill="transparent"
              id="fill1"
              r="10"
              transform="rotate(180 12 12)"
            />
            <circle
              cx="12"
              cy="12"
              id="stroke1"
              r="10"
              stroke="currentColor"
              stroke-width="2"
              transform="rotate(180 12 12)"
            />
            <path
              d="M16.5 12L12 12M12 12L7.5 12M12 12L12 7.5M12 12V16.5"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        <span
          class="text"
          data-v-dd5afc13=""
        >
          添加
        </span>
      </div>
      <div
        class="item"
        data-v-dd5afc13=""
      >
        <svg
          class="t-icon t-icon-star"
          data-v-dd5afc13=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="star"
          >
            <path
              d="M12.0001 3.67603L14.1867 9.96648L20.8449 10.1022L15.538 14.1256L17.4665 20.4999L12.0001 16.696L6.5337 20.4999L8.46217 14.1256L3.15527 10.1022L9.81354 9.96648L12.0001 3.67603Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M12.0001 3.67603L14.1867 9.96648L20.8449 10.1022L15.538 14.1256L17.4665 20.4999L12.0001 16.696L6.5337 20.4999L8.46217 14.1256L3.15527 10.1022L9.81354 9.96648L12.0001 3.67603Z"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        <span
          class="text"
          data-v-dd5afc13=""
        >
          收藏
        </span>
      </div>
      <div
        class="item"
        data-v-dd5afc13=""
      >
        <svg
          class="t-icon t-icon-jump"
          data-v-dd5afc13=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        <span
          class="text"
          data-v-dd5afc13=""
        >
          分享
        </span>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Fab > Fab draggableVue demo works fine 1`] = `
<div
  class="t-fab"
  style="right: 16px; bottom: 32px;"
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--circle t-fab__button"
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="fill: none; font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
    <span
      class="t-button__content"
    >
      
      
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Fab > Fab mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-760ddee4=""
>
  <h1
    class="title"
    data-v-760ddee4=""
  >
    Fab 悬浮按钮
  </h1>
  <p
    class="summary"
    data-v-760ddee4=""
  >
    当功能使用图标即可表示清楚时，可使用纯图标悬浮按钮，例如：添加、发布。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-760ddee4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纯图标悬浮按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-760ddee4=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          纯图标悬浮按钮
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-760ddee4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图标加文字悬浮按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-760ddee4=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          图标加文字悬浮按钮
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-760ddee4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        可移动悬浮按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-760ddee4=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          可移动悬浮按钮
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-760ddee4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带自动收缩功能
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-760ddee4=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          带自动收缩功能
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-760ddee4=""
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <div
        class="group"
        data-v-760ddee4=""
      >
        <div
          class="t-skeleton"
          data-v-760ddee4=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 163.5px; height: 163.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 61%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton"
          data-v-760ddee4=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 163.5px; height: 163.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 61%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
      <div
        class="group"
        data-v-760ddee4=""
      >
        <div
          class="t-skeleton"
          data-v-760ddee4=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 163.5px; height: 163.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 61%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton"
          data-v-760ddee4=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 163.5px; height: 163.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 61%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="t-fab"
    data-v-760ddee4=""
    style="right: 16px; bottom: 32px;"
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--circle t-fab__button"
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        style="fill: none; font-size: 24px;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="add"
        >
          <path
            d="M12 5L12 19M19 12L5 12"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      <span
        class="t-button__content"
      >
        
        
        
      </span>
      <!---->
    </button>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;
